# lerobot_plugins

./: README.md  pyproject.toml
commands/: four_mecanum_wheels_car.md  so101.md  template.md
commands/four_mecanum_wheels_car/: four_mecanum_wheels_car.md  four_mecanum_wheels_car.yaml
commands/group/: group.md  group.yaml
commands/so101/: so101.md  so101.yaml
commands/template/: template.md  template.yaml
commands/zmq/: zmq.md  zmq_client.yaml  zmq_host.yaml
robots/four_mecanum_wheels_car/: pyproject.toml
robots/four_mecanum_wheels_car/lerobot_robot_four_mecanum_wheels_car/: __init__.py  config_four_mecanum_wheels_car_follower.py  four_mecanum_wheels_car_follower.py
robots/group/: pyproject.toml
robots/group/lerobot_robot_group/: __init__.py  config_group_follower.py  group_follower.py
robots/motor/lerobot_robot_ttmotor/: main.py  pyproject.toml  test1.py  test2.py
robots/template/: pyproject.toml
robots/template/lerobot_robot_template/: __init__.py  config_template_follower.py  template_follower.py
robots/zmq/: pyproject.toml
robots/zmq/lerobot_robot_zmq/: __init__.py  config_zmq_client_follower.py  config_zmq_host.py  zmq_client_follower.py  zmq_host.py
scripts/zmq/: config_zmq_host.py  zmq_host.py
teleoperators/four_mecanum_wheels_car/: pyproject.toml
teleoperators/four_mecanum_wheels_car/lerobot_teleoperator_four_mecanum_wheels_car/: __init__.py  config_four_mecanum_wheels_car_leader.py  four_mecanum_wheels_car_leader.py
teleoperators/group/: pyproject.toml
teleoperators/group/lerobot_teleoperator_group/: __init__.py  config_group_leader.py  group_leader.py
teleoperators/template/: pyproject.toml
teleoperators/template/lerobot_teleoperator_template/: __init__.py  config_template_leader.py  template_leader.py
