[project]
name = "lerobot-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lerobot>=0.4.1",
    "lerobot-robot-template",
    "lerobot-teleoperator-template",
]

[tool.uv.workspace]
members = [
    "robots/template",
    "teleoperators/template",
]

[tool.uv.sources]
lerobot-robot-template = { workspace = true }
lerobot-teleoperator-template = { workspace = true }
