[project]
name = "lerobot-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.8.0",
    "lerobot>=0.4.1",
    "lgpio>=0.2.2.0",
]

[tool.uv.workspace]
members = [
    "robots/template",
    "teleoperators/template",
    "robots/four_mecanum_wheels_car",
    "teleoperators/four_mecanum_wheels_car",
]
